--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -25,16 +25,45 @@
     </div>
     <div>
         <p class="info center">Some random information.</p>
-        <div>
+        <div class="modules">
 
-            <div >
-                <img src="img/placeholder.png" class="module">
-                <p class="dbsf">this is some subtext under an illustration or image</p>
+            <div class="module">
+                <img src="img/placeholder.png" class="modimg center">
+                <p class="dbsf center">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="module">
+                <img src="img/placeholder.png" class="modimg center">
+                <p class="dbsf center">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="module">
+                <img src="img/placeholder.png" class="modimg center">
+                <p class="dbsf center">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="module">
+                <img src="img/placeholder.png" class="modimg center">
+                <p class="dbsf center">this is some subtext under an illustration or image</p>
             </div>
         </div>
     </div>
+
+    <div class="quotebox">
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="author">-Thor, God of  Thunder</p>
+    </div>
     
-    
+    <div class="action">
+        <div>
+            <p class="nomargin">Call to action! It's time!</p>
+            <p class="dbsf nomargin">Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <div class="rightf">
+            <button class="dbsf wborder">Sign Up</button>
+        </div>
+    </div>
+
+    <div class="darkb header footer">
+        <p class="dbsf">Copyright © The Odin Project 2021</p>
+    </div>
 
 </body>
 </html>
